--- a/src/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
@@ -47,7 +47,7 @@ else
 @section Scripts
 {
     <script>
-        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var recaptchaToken = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
         var emailInitialValue = '@ViewData["email"]'
         var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
