--- a/src/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -46,7 +46,7 @@
         var passwordRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["resetPassword:password"])";
         var passwordConfirmRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["resetPassword:passwordConfirm"])";
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
-        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var recaptchaToken = '@RecaptchaOptions.Value.SiteKey';
         var code = '@ViewData["code"]';
         var emailInitialValue = '@ViewData["email"]'
         var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
