--- a/src/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
@@ -40,7 +40,7 @@
 @section Scripts
 {
     <script>
-        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var recaptchaToken = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
         var returnUrlEncoded = '@System.Net.WebUtility.UrlEncode(Model.ReturnUrl)';
         var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
