--- a/src/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
@@ -5,12 +5,12 @@
 }
 
 
-<div class="mb-4 p-4 space-y-4">
+<div class="mb-4 p-4 space-y-6">
     <span class="green-success font-medium">
         <i class="fas fa-check"></i> @Model.StatusMessage
     </span>
-    <div class="text-red-600 text-center mt-4">
-        <a class="primary"  href="~/">@Localizer["login.back"]</a>
+    <div class="text-red-600 text-center">
+        <a class="primary "  href="~/">@Localizer["login.back"]</a>
     </div>
    
 </div>
