--- a/src/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -68,7 +68,7 @@
     <script>
        
         var codeRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, "Code")";
-        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var recaptchaToken = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
         
         var rememberMe = @Model.RememberMe.ToString().ToLower();
