--- a/src/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -32,7 +32,7 @@
     <script>
         var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
-        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var recaptchaToken = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
         
         var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
