--- a/src/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
@@ -59,7 +59,7 @@
 {
     <script>
         var codeRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, "Code")";
-        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var recaptchaToken = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
         var returnUrlEncoded = '@System.Net.WebUtility.UrlEncode(Model.ReturnUrl)';
         var rememberMe = @Model.RememberMe.ToString().ToLower();
