--- a/src/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
@@ -24,10 +24,13 @@
 
             <partial name="Shared/ErrorList"/>
 
-            <input id="username" name="username" type="text" autofocus="" v-model="username" placeholder="@Localizer["changeUsername:newUserName"]" required class="text-box">
-            <button v-on:click.prevent="changeUsername" class="primary full items-center" :disabled="status == 'sending'">
-                @Localizer["changeUsername:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-            </button>
+            <div v-if="status != 'done'" class="space-y-4">
+                 <input id="username" name="username" type="text" autofocus="" v-model="username" placeholder="@Localizer["changeUsername:newUserName"]" required class="text-box">
+                <button v-on:click.prevent="changeUsername" class="primary full items-center" :disabled="status == 'sending'">
+                    @Localizer["changeUsername:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+                </button>
+            </div>
+           
         </fieldset>
 
     </form>
