--- a/src/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -39,20 +39,20 @@
     <div  v-if="status != 'done'">
          <partial name="Shared/SeparatorWithTitle" model="new { Title =  @Localizer["register:continueWith"] }"/>
             
-            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="mt-4" v-if="status != 'done'">
-                <ul>
+            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="mt-4  grid grid-flow-row grid-cols-2" v-if="status != 'done'">
+              
         
                     @foreach (var provider in Model.ExternalLogins)
                     {
-                        <li>
-                            <button type="submit" name="provider" value="@provider.Name" class="btn-simple">
+                       
+                            <button type="submit" name="provider" value="@provider.Name" class="btn-simple m-1">
                                 <i class="@("fab fa-" + provider.DisplayName!.ToLower())"></i>&nbsp;
                                 @provider.DisplayName
                             </button>
-                        </li>
+                      
                     }
         
-                </ul>
+               
             </form>
     </div>
    
