--- a/src/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -1,6 +1,7 @@
 @page
 @using Nuages.Web.Recaptcha
 @using System.Net
+@using Nuages.Identity.UI.Setup
 @model Nuages.Identity.UI.Pages.Account.Login
 @inject IOptions<GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<UIOptions> UIOptions
