--- a/src/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using Nuages.Web.Recaptcha
+@using Nuages.Identity.UI.Setup
 @model LoginWith2faModel
 @inject IOptions<GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<UIOptions> UIOptions
