--- a/src/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using Nuages.Web.Recaptcha
+@using Nuages.Identity.UI.Setup
 @model LoginWithRecoveryCodeModel
 @inject IOptions<GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<UIOptions> UIOptions
