--- a/src/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
@@ -1,5 +1,6 @@
 @page
 @using Nuages.Web.Recaptcha
+@using Nuages.Identity.UI.Setup
 @model Nuages.Identity.UI.Pages.Account.LoginWithSMS
 @inject IOptions<GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<UIOptions> UIOptions
