--- a/src/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Nuages.Web.Recaptcha
 @using Nuages.Identity.Services.AspNetIdentity
+@using Nuages.Identity.UI.Setup
 @inject IOptions<GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 @inject IOptions<UIOptions> UIOptions
