--- a/src/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/src/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -64,8 +64,7 @@
             @foreach (var provider in Model.ExternalLogins)
             {
                 <button type="submit" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account" class="btn-simple m-1 ">
-                    <i class="@("fab fa-" + provider.DisplayName!.ToLower())"></i>&nbsp;
-                    @provider.DisplayName
+                    <i class="@("fab fa-" + provider.DisplayName!.ToLower())"></i>&nbsp;@provider.DisplayName
                 </button>
             }
             @if (UIOptions.Value.EnableMagicLink)
